# analyzer

./: .gitignore  .gitmodules  ANALYSIS.md  AUTOBE-GENERATION-REPORT.md  AUTOGENLIB_INTEGRATION.md  CDn.md  CLAUDE.md  CREDENTIALS_GUIDE.md  Combined_Recommendations.md  DEPLOYMENT_TEST_RESULTS.md  DOCKERS.json  DOCUMENTATION.md  FEATURE_MAP.md  FUNCTION_VALIDATION_REPORT.md  GEMINI.md  GIT.json  GIT_Repository_Analysis.md  INTEGRATION_PROGRESS.md  IRIS_QUICKSTART.md  K2.rar  LIBRARY_SYNC.md  MCP.md  NPM.json  NPM_Package_Analysis.md  NPMs.js  NPMs.md  OPENCLAW_PROJECTS_ANALYSIS.md  PACKAGE_EXPLANATIONS.md  PR8_ANALYSIS_REPORT.md  Pen.md  QUICK_REFERENCE.md  README.md  RESEARCH.md  SERENA_ADAPTER_GUIDE.md  STATIC_LIBS_FIX_NEEDED.md  SUBMODULES.md  VALIDATION_REPORT.md  WEB2API.md  bookmarks_2_4_26.html  codegen.py  (+24 more)
eversale/: .gitignore  README.md  eversale_cli.py  package.json  pyproject.toml
eversale/engine/: LINKEDIN_FALLBACK_FIX.md  LINKEDIN_SEARCH_QUICK_REF.md  ORCHESTRATION_PROSPECT_FIX.md  RUN_SIMPLE_INDEX.md  RUN_SIMPLE_INTEGRATION.md  RUN_SIMPLE_QUICKSTART.md  RUN_SIMPLE_SUMMARY.md  __init__.py  agent_agentic_browser.py  auto_restart.py  local_api_server.py  local_server_launcher.py  run_mcp.py  run_simple.py  run_ultimate.py  test_full_extraction.py  test_handlers_headless.py  test_search_alternatives.py
eversale/engine/ace/: QUICK_START.md  injector.py  playbook.py  playbook.yaml  reflector.py  starter_playbook.yaml
eversale/engine/agent/: A11Y_ASSERTIONS_QUICK_REF.md  A11Y_ASSERTION_METHODS.md  A11Y_BROWSER_COMPLETE_API.md  A11Y_OPTIMIZATION_SUMMARY.md  A11Y_PHASE5_COMPLETE.md  (+454 more)
(+757 files in other folders)
